# galen-ambf

./: CMakeLists.txt  README.md
ADF/: drill.yaml  galen.yaml  galen_endoscope.yaml  launch.yaml  sensors_actuators.yaml  skull.yaml  volume_171.yaml  volume_256.yaml  volume_512.yaml
ADF/high_res/: ArnoldSchwarzeneggerBust.STL  Carriage1_lh.STL  Carriage2.STL  Carriage3_rh.STL  Dovetail-Female Mk2.0.stl  Endoscope 35 degree in REMS.STL  Leg1_r.STL  Leg2_r.STL  Leg3_r.STL  Plane.STL  Plate-Chassis Base.STL  Rail1.STL  Skull.STL  Skull.mtl  Sphere.STL  Tilt Distal Linkage and Force Sensor.STL  Tilt Middle Linkage.STL  Tilt Proximal Linkage.STL  dovetail_male.stl  drill_and_adapter_short.STL  drill_tip.stl  full_drill_and_adapter.STL
ADF/input_devices/: input_devices.yaml
ADF/low_res/: Carriage1.STL  Carriage1_rh.STL  Carriage2_lh.STL  Carriage2_rh.STL  Carriage3.STL  Carriage3_lh.STL  Endoscope Tip.STL  Leg2_l.STL  Leg3_l.STL  Plate_Chassis Base.STL  Roll Arm Base.STL  Roll Arm Housing.STL  Skull.mtl
ADF/unconstrained-platform-version/: galen.yaml
ADF/world/: world.yaml
plugins/: CMakeLists.txt
plugins/control_plugin/: CMakeLists.txt  GalenControlPlugin.cpp  GalenControlPlugin.h  GalenInterface.cpp  GalenInterface.h  GalenInvKin.cpp  GalenInvKin.h  GalenSimpModel.cpp  GalenSimpModel.h
plugins/control_plugin/plugin_msgs/: CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
plugins/control_plugin/plugin_msgs/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  plugin_msgs-msg-extras.cmake.develspace.in
plugins/control_plugin/plugin_msgs/catkin_generated/installspace/: plugin_msgsConfig.cmake
plugins/control_plugin/plugin_msgs/cmake/: plugin_msgs-genmsg-context.py  plugin_msgs-genmsg.cmake
plugins/control_plugin/plugin_msgs/msg/: RobotState.msg
